--- a/build.gradle
+++ b/build.gradle
@@ -420,8 +420,7 @@ subprojects {
   if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
     testsToExclude.addAll([
       // connect tests
-      "**/KafkaConfigBackingStoreTest.*",
-      "**/WorkerSinkTaskTest.*"
+      "**/KafkaConfigBackingStoreTest.*"
     ])
   }
 
