--- a/build.gradle
+++ b/build.gradle
@@ -2782,6 +2782,7 @@ project(':jmh-benchmarks') {
     }
     implementation project(':server-common')
     implementation project(':server')
+    implementation project(':raft')
     implementation project(':clients')
     implementation project(':group-coordinator')
     implementation project(':metadata')
