MINOR: Remove unneccessary version from excluded dependencies of clients (#15804)
Small cleanup: removed version when excluding shaded dependencies from clients library as it's not needed.

Reviewers: Luke Chen <showuon@gmail.com>, Chia-Ping Tsai <chia7712@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1501,7 +1501,7 @@ project(':clients') {
     // dependencies excluded from the final jar, since they are declared as runtime dependencies
     dependencies {
       project.configurations.shadowed.allDependencies.each {
-        exclude(dependency(it.group + ':' + it.name + ':' + it.version))
+        exclude(dependency(it.group + ':' + it.name))
       }
       // exclude proto files from the jar
       exclude "**/opentelemetry/proto/**/*.proto"
