--- a/build.gradle
+++ b/build.gradle
@@ -176,6 +176,8 @@ allprojects {
     options.memberLevel = JavadocMemberLevel.PUBLIC  // Document only public members/API
     // Turn off doclint for now, see https://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html for rationale
     options.addStringOption('Xdoclint:none', '-quiet')
+    // Javadoc warnings should fail the build in JDK 15+ https://bugs.openjdk.org/browse/JDK-8200363
+    options.addBooleanOption('Werror', JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15))
 
     // The URL structure was changed to include the locale after Java 8
     if (JavaVersion.current().isJava11Compatible())
@@ -611,6 +613,8 @@ subprojects {
   }
 
   task docsJar(dependsOn: javadocJar)
+
+  test.dependsOn('javadoc')
 
   task systemTestLibs(dependsOn: jar)
 
