--- a/build.gradle
+++ b/build.gradle
@@ -221,7 +221,6 @@ def excludedSpotlessModules = [':clients',
                                ':metadata',
                                ':raft',
                                ':server',
-                               ':server-common',
                                ':shell',
                                ':storage',
                                ':storage:storage-api', //  rename in settings.gradle
@@ -254,7 +253,6 @@ def excludedSpotlessModules = [':clients',
                                ':streams:upgrade-system-tests-37',
                                ':tools',
                                ':tools:tools-api',
-                               ':transaction-coordinator',
                                ':trogdor']
 
 
@@ -842,8 +840,10 @@ subprojects {
     skipProjects = [ ":jmh-benchmarks", ":trogdor" ]
     skipConfigurations = [ "zinc" ]
   }
-  
-  if(JavaVersion.current().isJava11Compatible() && project.path !in excludedSpotlessModules) {
+  //  the task `removeUnusedImports` is implemented by google-java-format, 
+  //  and unfortunately the google-java-format version used by spotless 6.14.0 can't work with JDK 21. 
+  //  Hence, we apply spotless tasks only if the env is either JDK11 or JDK17
+  if ((JavaVersion.current().isJava11() || (JavaVersion.current() == JavaVersion.VERSION_17)) && project.path !in excludedSpotlessModules) {
     apply plugin: 'com.diffplug.spotless'
     spotless {
       java {
