add slf4jlog4j in tool (#16260)
In #12148 , we removed log4jAppender dependency, and add testImplementation dependency for slf4jlog4j lib. However, we need this runtime dependency in tools module to output logs. (ref) Adding this dependency back.

Note: The slf4jlog4j lib was added in log4j-appender dependency. Since it's removed, we need to explicitly declare it.

Reviewers: Chia-Ping Tsai <chia7712@gmail.com>, Edoardo Comar <ecomar@uk.ibm.com>

--- a/build.gradle
+++ b/build.gradle
@@ -2167,7 +2167,6 @@ project(':tools') {
   }
 
   dependencies {
-    compileOnly libs.slf4jlog4j
     implementation project(':clients')
     implementation project(':storage')
     implementation project(':server-common')
@@ -2178,6 +2177,7 @@ project(':tools') {
     implementation libs.jacksonDataformatCsv
     implementation libs.jacksonJDK8Datatypes
     implementation libs.slf4jApi
+    implementation libs.slf4jlog4j
     implementation libs.joptSimple
 
     implementation libs.jose4j                    // for SASL/OAUTHBEARER JWT validation
@@ -2204,7 +2204,6 @@ project(':tools') {
       exclude group: 'junit', module: 'junit'
     }
     testImplementation libs.log4j
-    testRuntimeOnly libs.slf4jlog4j
   }
 
   javadoc {
