KAFKA-16373: KIP-1028: Modfiying download url for kafka dockerfile (#16281)
This PR modifies the download url from https://downloads.apache.org/kafka/ to https://archive.apache.org/dist/kafka/ as the former is not permanent.

Reviewers: Manikumar Reddy <manikumar.reddy@gmail.com>, Vedarth Sharma <vesharma@confluent.io>

--- a/docker/docker_official_images/3.7.0/jvm/Dockerfile
+++ b/docker/docker_official_images/3.7.0/jvm/Dockerfile
@@ -20,8 +20,8 @@ FROM eclipse-temurin:21-jre-alpine AS build-jsa
 
 USER root
 
-# Get Kafka from https://downloads.apache.org/kafka, url passed as env var, for version 3.7.0
-ENV kafka_url https://downloads.apache.org/kafka/3.7.0/kafka_2.13-3.7.0.tgz
+# Get Kafka from https://archive.apache.org/dist/kafka, url passed as env var, for version 3.7.0
+ENV kafka_url https://archive.apache.org/dist/kafka/3.7.0/kafka_2.13-3.7.0.tgz
 
 COPY jsa_launch /etc/kafka/docker/jsa_launch
 
@@ -48,9 +48,9 @@ EXPOSE 9092
 
 USER root
 
-# Get Kafka from https://downloads.apache.org/kafka, url passed as env var, for version 3.7.0
-ENV kafka_url https://downloads.apache.org/kafka/3.7.0/kafka_2.13-3.7.0.tgz
-ENV build_date 2024-06-10
+# Get Kafka from https://archive.apache.org/dist/kafka, url passed as env var, for version 3.7.0
+ENV kafka_url https://archive.apache.org/dist/kafka/3.7.0/kafka_2.13-3.7.0.tgz
+ENV build_date 2024-06-11
 
 
 LABEL org.label-schema.name="kafka" \
