KAFKA-16921 [1/N] Migrate all junit 4 code to junit 5 for connect module (#16253)
Reviewers: Chia-Ping Tsai <chia7712@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -427,9 +427,6 @@ subprojects {
     }
   }
 
-  // Remove the relevant project name once it's converted to JUnit 5
-  def shouldUseJUnit5 = !(["runtime"].contains(it.project.name))
-
   def testLoggingEvents = ["passed", "skipped", "failed"]
   def testShowStandardStreams = false
   def testExceptionFormat = 'full'
@@ -522,8 +519,7 @@ subprojects {
 
     exclude testsToExclude
 
-    if (shouldUseJUnit5)
-      useJUnitPlatform()
+    useJUnitPlatform()
 
     retry {
       maxRetries = userMaxTestRetries
@@ -550,23 +546,18 @@ subprojects {
 
     exclude testsToExclude
 
-    if (shouldUseJUnit5) {
-      if (project.name == 'streams') {
-        useJUnitPlatform {
-          includeTags "integration"
-          includeTags "org.apache.kafka.test.IntegrationTest"
-	  // Both engines are needed to run JUnit 4 tests alongside JUnit 5 tests.
-          // junit-vintage (JUnit 4) can be removed once the JUnit 4 migration is complete.
-          includeEngines "junit-vintage", "junit-jupiter"
-        }
-      } else {
-        useJUnitPlatform {
-          includeTags "integration"
-        }
+    if (project.name == 'streams') {
+      useJUnitPlatform {
+        includeTags "integration"
+        includeTags "org.apache.kafka.test.IntegrationTest"
+        // Both engines are needed to run JUnit 4 tests alongside JUnit 5 tests.
+        // junit-vintage (JUnit 4) can be removed once the JUnit 4 migration is complete.
+        includeEngines "junit-vintage", "junit-jupiter"
       }
     } else {
-      useJUnit {
-        includeCategories 'org.apache.kafka.test.IntegrationTest'
+      useJUnitPlatform {
+        includeTags "integration"
+        includeTags 'org.apache.kafka.test.IntegrationTest'
       }
     }
 
@@ -593,23 +584,18 @@ subprojects {
 
     exclude testsToExclude
 
-    if (shouldUseJUnit5) {
-      if (project.name == 'streams') {
-        useJUnitPlatform {
-          excludeTags "integration"
-          excludeTags "org.apache.kafka.test.IntegrationTest"
-	  // Both engines are needed to run JUnit 4 tests alongside JUnit 5 tests.
-          // junit-vintage (JUnit 4) can be removed once the JUnit 4 migration is complete.
-          includeEngines "junit-vintage", "junit-jupiter"
-        }
-      } else {
-        useJUnitPlatform {
-          excludeTags "integration"
-        }
+    if (project.name == 'streams') {
+      useJUnitPlatform {
+        excludeTags "integration"
+        excludeTags "org.apache.kafka.test.IntegrationTest"
+        // Both engines are needed to run JUnit 4 tests alongside JUnit 5 tests.
+        // junit-vintage (JUnit 4) can be removed once the JUnit 4 migration is complete.
+        includeEngines "junit-vintage", "junit-jupiter"
       }
     } else {
-      useJUnit {
-        excludeCategories 'org.apache.kafka.test.IntegrationTest'
+      useJUnitPlatform {
+        excludeTags "integration"
+        excludeTags 'org.apache.kafka.test.IntegrationTest'
       }
     }
 
@@ -3229,10 +3215,13 @@ project(':connect:runtime') {
     testImplementation project(':storage')
     testImplementation project(':connect:test-plugins')
     testImplementation project(':group-coordinator')
-    
-    testImplementation libs.junitJupiterApi
+
+    testImplementation libs.junitJupiter
     testImplementation libs.junitVintageEngine
+    testImplementation libs.mockitoJunitJupiter
     testImplementation libs.mockitoCore
+    testImplementation libs.hamcrest
+    testImplementation libs.mockitoJunitJupiter
     testImplementation libs.httpclient
 
     testRuntimeOnly libs.slf4jlog4j
